@@ -26,6 +26,8 @@ RPC - New command 'getaccountbalances' return a list of individual balances for 
 RPC - New command 'listunspentforaccount' as account specific counterpart for listunspent.
 RPC - New command 'rescan' to trigger a wallet rescan (Same as Tools>rescan via UI).
 RPC - New command 'getrescanprogress' to view the progress percentageof an ongoing wallet rescan.
+RPC - New command 'getimmaturebalance' as conterpart to 'getunconfirmedbalance'
+RPC - New command 'getlockedbalance' as conterpart to 'getunconfirmedbalance'
 RPC - Add account capability to 'sendmany' command.
 RPC - Modify 'listaccounts' command to take an optional second paramater to filter on account state. Add a new "state" field to the output and clarify better the difference between "type" and "HD_type"
 
